[FIX] Specify kong.yml source directory

--- a/ansible/playbooks/roles/install-k4k8s/tasks/main.yml
+++ b/ansible/playbooks/roles/install-k4k8s/tasks/main.yml
@@ -3,5 +3,5 @@
 - name: Create a Deployment by reading the definition from a local file
   k8s:
     state: present
-    src: kong.yml
+    src: files/kong.yml
   
