REFACTOR: Change task description.

--- a/ansible/playbooks/roles/install-k4k8s/tasks/main.yml
+++ b/ansible/playbooks/roles/install-k4k8s/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for install-k4k8s
-- name: Create a Deployment by reading the definition from a local file
+- name: Apply the Kong Kubernetes manifest against the Kubernetes Cluster
   k8s:
     state: present
     src: "{{ files_dir_local }}/kong.yml"
